@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,14 +25,19 @@ package gc.z;
 
 /*
  * @test TestAllocateHeapAt
- * @requires vm.gc.ZGenerational & os.family == "linux"
+ * @requires vm.gc.Z & os.family == "linux"
+ * @requires !vm.opt.final.UseLargePages
+ * @requires !vm.opt.final.UseTransparentHugePages
  * @summary Test ZGC with -XX:AllocateHeapAt
  * @library /test/lib
  * @run main/othervm gc.z.TestAllocateHeapAt . true
  * @run main/othervm gc.z.TestAllocateHeapAt non-existing-directory false
  */
 
+import jdk.test.lib.os.linux.HugePageConfiguration;
+import jdk.test.lib.os.linux.HugePageConfiguration.ShmemTHPMode;
 import jdk.test.lib.process.ProcessTools;
+import jtreg.SkippedException;
 
 public class TestAllocateHeapAt {
     public static void main(String[] args) throws Exception {
@@ -41,9 +46,15 @@ public class TestAllocateHeapAt {
         final String heapBackingFile = "Heap Backing File: " + directory;
         final String failedToCreateFile = "Failed to create file " + directory;
 
-        ProcessTools.executeLimitedTestJava(
+        final HugePageConfiguration hugePageConfiguration = HugePageConfiguration.readFromOS();
+        final ShmemTHPMode mode = hugePageConfiguration.getShmemThpMode();
+
+        if (mode != ShmemTHPMode.never && mode != ShmemTHPMode.advise) {
+            throw new SkippedException("The UseTransparentHugePages option may not be respected with Shmem THP Mode: " + mode.name());
+        }
+
+        ProcessTools.executeTestJava(
             "-XX:+UseZGC",
-            "-XX:+ZGenerational",
             "-Xlog:gc*",
             "-Xms32M",
             "-Xmx32M",
