@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,14 +22,14 @@
  */
 package org.openjdk.bench.jdk.classfile;
 
-import java.lang.classfile.AccessFlags;
 import java.lang.reflect.AccessFlag;
 import java.lang.classfile.ClassFile;
-import java.lang.classfile.TypeKind;
 import java.lang.classfile.attribute.SourceFileAttribute;
 import jdk.internal.org.objectweb.asm.*;
 import org.openjdk.jmh.annotations.*;
 import java.io.FileOutputStream;
+import static java.lang.classfile.ClassFile.ACC_PUBLIC;
+import static java.lang.classfile.ClassFile.ACC_STATIC;
 import static java.lang.constant.ConstantDescs.*;
 
 import java.nio.file.Files;
@@ -56,12 +56,20 @@ import static org.openjdk.bench.jdk.classfile.TestConstants.*;
  */
 @Warmup(iterations = 3)
 @Measurement(iterations = 5)
-@Fork(value = 1, jvmArgsAppend = {
+@Fork(value = 1, jvmArgs = {
         "--add-exports", "java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED",
         "--add-exports", "java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED",
-        "--enable-preview",
         "--add-exports", "java.base/jdk.internal.classfile.impl=ALL-UNNAMED"})
 public class Write {
+    static final int REPEATS = 40;
+    static final String[] METHOD_NAMES;
+    static {
+        var names = new String[REPEATS];
+        for (int xi = 0; xi < REPEATS; ++xi) {
+            names[xi] = "main" + ((xi == 0) ? "" : "" + xi);
+        }
+        METHOD_NAMES = names;
+    }
     static String checkFileAsm = "/tmp/asw/MyClass.class";
     static String checkFileBc = "/tmp/byw/MyClass.class";
     static boolean writeClassAsm = Files.exists(Paths.get(checkFileAsm).getParent());
@@ -90,8 +98,8 @@ public class Write {
             mv.visitEnd();
         }
 
-        for (int xi = 0; xi < 40; ++xi) {
-            MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC+Opcodes.ACC_STATIC, "main"+ ((xi==0)? "" : ""+xi), "([Ljava/lang/String;)V", null, null);
+        for (int xi = 0; xi < REPEATS; ++xi) {
+            MethodVisitor mv = cw.visitMethod(Opcodes.ACC_PUBLIC+Opcodes.ACC_STATIC, METHOD_NAMES[xi], "([Ljava/lang/String;)V", null, null);
             mv.visitCode();
             Label loopTop = new Label();
             Label loopEnd = new Label();
@@ -141,14 +149,14 @@ public class Write {
             cb.withVersion(52, 0);
             cb.with(SourceFileAttribute.of(cb.constantPool().utf8Entry(("MyClass.java"))))
               .withMethod(INIT_NAME, MTD_void, 0, mb -> mb
-                      .withCode(codeb -> codeb.loadLocal(TypeKind.ReferenceType, 0)
-                                              .invoke(INVOKESPECIAL, CD_Object, INIT_NAME, MTD_void, false)
-                                              .return_(VoidType)
+                      .withCode(codeb -> codeb.aload(0)
+                                              .invokespecial(CD_Object, INIT_NAME, MTD_void)
+                                              .return_()
                       )
               );
-            for (int xi = 0; xi < 40; ++xi) {
-                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MTD_void_StringArray,
-                              AccessFlags.ofMethod(AccessFlag.STATIC, AccessFlag.PUBLIC).flagsMask(),
+            for (int xi = 0; xi < REPEATS; ++xi) {
+                cb.withMethod(METHOD_NAMES[xi], MTD_void_StringArray,
+                              ACC_PUBLIC | ACC_STATIC,
                               mb -> mb.withCode(c0 -> {
                                   java.lang.classfile.Label loopTop = c0.newLabel();
                                   java.lang.classfile.Label loopEnd = c0.newLabel();
@@ -172,54 +180,6 @@ public class Write {
                                     .getstatic(CD_System, "out", CD_PrintStream) // 13
                                     .iload(vFac)
                                     .invokevirtual(CD_PrintStream, "println", MTD_void_int) // 15
-                                    .return_();
-                        }));
-            }
-        });
-        if (writeClassBc) writeClass(bytes, checkFileBc);
-        return bytes;
-    }
-
-    @Benchmark
-    @BenchmarkMode(Mode.Throughput)
-    public byte[] jdkTreePrimitive() {
-
-        byte[] bytes = ClassFile.of().build(CD_MyClass, cb -> {
-            cb.withFlags(AccessFlag.PUBLIC);
-            cb.withVersion(52, 0);
-            cb.with(SourceFileAttribute.of(cb.constantPool().utf8Entry(("MyClass.java"))))
-              .withMethod(INIT_NAME, MTD_void, 0,
-                          mb -> mb.withCode(codeb -> codeb.loadLocal(ReferenceType, 0)
-                                                          .invokespecial(CD_Object, INIT_NAME, MTD_void, false)
-                                                          .return_()
-                          )
-              );
-            for (int xi = 0; xi < 40; ++xi) {
-                cb.withMethod("main" + ((xi == 0) ? "" : "" + xi), MTD_void_StringArray,
-                              AccessFlags.ofMethod(AccessFlag.STATIC, AccessFlag.PUBLIC).flagsMask(),
-                              mb -> mb.withCode(c0 -> {
-                                  java.lang.classfile.Label loopTop = c0.newLabel();
-                                  java.lang.classfile.Label loopEnd = c0.newLabel();
-                                  int vFac = 1;
-                                  int vI = 2;
-                                  c0.iconst_1()         // 0
-                                    .istore(1)          // 1
-                                    .iconst_1()         // 2
-                                    .istore(2)          // 3
-                                    .labelBinding(loopTop)
-                                    .iload(2)           // 4
-                                    .bipush(10)         // 5
-                                    .if_icmpge(loopEnd) // 6
-                                    .iload(1)           // 7
-                                    .iload(2)           // 8
-                                    .imul()             // 9
-                                    .istore(1)          // 10
-                                    .iinc(2, 1)         // 11
-                                    .goto_(loopTop)     // 12
-                                    .labelBinding(loopEnd)
-                                    .getstatic(CD_System, "out", CD_PrintStream)  // 13
-                                    .iload(1)
-                                    .invokevirtual(CD_PrintStream, "println", MTD_void_int)  // 15
                                     .return_();
                         }));
             }
